@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-23T00:35:29Z",
-  "count_outdated" : 958,
-  "uniques_outdated" : 54,
+  "timestamp" : "2022-04-23T16:09:49Z",
+  "count_outdated" : 959,
+  "uniques_outdated" : 55,
   "count" : 1048,
   "uniques" : 66,
   "views" : [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 8,
