@@ -1,12 +1,7 @@
 {
-  "count": 90,
+  "count": 89,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 8,
