@@ -1,3 +1,9 @@
+2022-04-23T16:09:49Z:
+* notice: last 14d: all unq: 89 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 958 54 / 1048 66
+* notice: next accum: outdated-all outdated-unq / all unq: 959 55 / 1048 66
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-23T00:35:29Z:
 * notice: last 14d: all unq: 90 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 931 53 / 1030 66
